# ai4ais_1

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_models.py
app/: __init__.py  api_clients.py  config.py  main.py
config/: models.yaml
static/: script.js  style.css
templates/: index.html
