[project]
name = "ai4ais-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.48.0",
    "fastapi>=0.128.6",
    "httpx>=0.28.1",
    "inspect-ai>=0.3.174",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "openai>=1.64.0",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "uvicorn>=0.40.0",
    "zai-sdk>=0.2.2",
]
